# straceprof

./: .prettierignore  DEVELOPMENT.md  README.md  jest.config.ts  prettier.config.js  pyproject.toml  tsconfig.test.json
.github/workflows/: deploy-js.yaml  js-check.yaml  lint.yaml
build-log-example/: run.sh  uv.Dockerfile
example/: qemu.Dockerfile  ruby.Dockerfile  uv.Dockerfile
src/: LogExamples.ts  ProcessCanvas.tsx  ProcessUtils.ts  ProcessVisualizer.tsx
src/straceprof/: cli.py
straceprof-js/: README.md  index.html  package-lock.json  package.json  vite.config.ts
straceprof-js/src/: App.tsx  LogExamples.ts  LogFileSelector.tsx  LogUtils.ts  NoProcessesFound.tsx  ProcessCanvas.tsx  ProcessCanvasController.tsx  ProcessController.tsx  ProcessTable.tsx  ProcessTooltip.tsx  ProcessUtils.test.ts  ProcessUtils.ts  ProcessVisualizer.tsx  TestParser.tsx  index.css
straceprof-python/: pyproject.toml
